[package]
name = "constraint-mux"
version = "0.2.0"
edition = "2021"
description = "Serial port multiplexer with real-time consonance analysis — collaborative constraint-aware instrument bridge"

[[bin]]
name = "constraint-mux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3" }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
dirs = "6"
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
